# protocol

./: .gitignore  Cargo.toml  Dockerfile.devnet  Makefile  README.md  STYLE.md
.config/: nextest.toml
circuits/: Cargo.toml  build-elf.sh
circuits/elf/: riscv32im-succinct-zkvm-elf
contracts/: .gitignore  README.md  foundry.toml  package.json  remappings.txt  slither.config.json  sync-artifacts.sh
contracts/artifacts/: BTCDutchAuctionHouse.json  BitcoinLightClient.json  Bundler3.json  ERC20.json  GeneralAdapter1.json  HelperTypes.json  LibExposer.json  MappingWhitelist.json  MockToken.json  ParaswapAdapter.json  RiftAuctionAdaptor.json  RiftExchange.json  RiftExchangeHarness.json  SP1MockVerifier.json  SyntheticBTC.json  TokenizedBTC.json  TypeExposer.json
contracts/broadcast/DeployRiftExchange.s.sol/42161/: run-1733784122.json  run-1733784178.json  run-1733804594.json  run-1733804819.json  run-1733804954.json  run-1733805251.json
contracts/broadcast/UpgradeRiftExchange.s.sol/42161/: run-1731955495.json  run-1731955601.json  run-1731956346.json  run-1731956515.json  run-1731956709.json
contracts/scripts/: DeployMockVerifier.sol  DeployRiftExchange.s.sol
contracts/snapshots/: BitcoinScriptLibTest.json  HashLibUnitTest.json  MMRProofLibTest.json
contracts/src/: BTCAuctionHouse.sol  BTCDutchAuctionHouse.sol  BitcoinLightClient.sol  BondManager.sol  EIP712.sol  MappingWhitelist.sol  RiftAuctionAdaptor.sol  RiftExchange.sol  RiftReactor.sol
contracts/src/interfaces/: IBTCDutchAuctionHouse.sol  IBitcoinLightClient.sol  IRiftAuctionAdaptor.sol  IRiftExchange.sol  IRiftWhitelist.sol
contracts/src/libraries/: BitcoinScriptLib.sol  ChallengePeriodLib.sol  Constants.sol  DataIntegrityLib.sol  DutchDecayLib.sol  Errors.sol  Events.sol  FeeLib.sol  HashLib.sol  Hashing.sol  LightClientVerificationLib.sol  MMRProof.sol  OrderLockupLib.sol  OrderValidationLib.sol  PeriodLib.sol  RiftUtils.sol  Types.sol  VaultLib.sol
contracts/tests/: TypeExposer.sol
contracts/tests/invariant/: README.md  RiftReactorInvariants.t.sol  TestRiftInvariant.sol  TestRiftInvariant.t.sol
contracts/tests/unit/: ExecuteIntentWithSwapTest.sol  RiftReactorUnit.t.sol  TestBTCAuctionHouse.sol  TestBTCAuctionHouse.t.sol  TestBitcoinScriptLib.sol  TestBitcoinScriptLib.t.sol  TestHashLibUnit.t.sol  TestLockupLibs.t.sol  TestMMRProof.sol  TestMMRProof.t.sol  TestRiftAuctionAdaptor.sol  TestRiftAuctionAdaptor.t.sol  TestRiftUnit.sol  TestRiftUnit.t.sol
contracts/tests/unit/Reactor/: DutchAuctionFuzzTest.sol  EIP712ValidationTest.sol  ExecuteIntentFuzzTest.sol  ExecuteIntentWithSwapOverwriteTest.sol  ExecuteIntentWithSwapTest.sol  Permit2SecurityTest.sol  ReactorFuzzTest.sol  ReentrancyTest.sol  ReleaseAndFreeFuzzTest.sol  ReleaseAndFreeTest.sol  RiftReactorUnit.sol  SimpleIntentTest.sol  ValidateBondAndExecuteIntentTest.sol  WithdrawAndPenalizeTest.sol  WithdrawPenalizeFuzzTest.sol
contracts/tests/utils/: HelperTypes.sol  HelperTypes.t.sol  LibExposer.sol  MockToken.sol  PRNG.sol  PRNG.t.sol  RiftTest.sol  RiftTest.t.sol  RiftTestSetup.t.sol  SyntheticBTC.sol  TokenizedBTC.t.sol
crates/bitcoin-core-rs/: Cargo.toml
crates/bitcoin-core-rs/src/: error.rs  lib.rs
crates/bitcoin-data-engine/: Cargo.toml
crates/bitcoin-data-engine/src/: lib.rs
crates/bitcoin-light-client-core/: Cargo.toml
crates/bitcoin-light-client-core/src/: error.rs  hasher.rs  leaves.rs  lib.rs  light_client.rs  mmr.rs
crates/data-engine/: Cargo.toml
crates/data-engine/src/: db.rs  engine.rs  models.rs
crates/devnet/: Cargo.toml  README.md
crates/devnet/src/: bitcoin_devnet.rs  devnet_lock.rs  evm_devnet.rs  lib.rs  mempool_electrs_rest_client.rs  mempool_electrs_types.rs  mempool_electrsd.rs
crates/rift-core/: Cargo.toml
crates/rift-core/src/: error.rs  lib.rs  payments.rs  spv.rs  vaults.rs
crates/rift-indexer/: Cargo.toml
crates/rift-indexer/src/: db.rs  engine.rs  models.rs
crates/rift-program/: Cargo.toml
crates/rift-program/src/: main.rs
crates/rift-sdk/: Cargo.toml
crates/rift-sdk/src/: bitcoin_utils.rs  block_watcher.rs  btc_txn_broadcaster.rs  btc_txn_broadcaster_db.rs  chainIdToName.json  chainIdToRpcs.json  chains.rs  checkpoint_mmr.rs  cpfp_analyzer.rs  cpfp_builder.rs  errors.rs  fee_provider.rs  indexed_mmr.rs  lib.rs  mmr.rs  proof_generator.rs  quote.rs  rbf_builder.rs  transaction_monitor.rs  txn_broadcast.rs  txn_builder.rs  utxo_manager.rs
crates/sol-bindings/: Cargo.toml
crates/sol-bindings/src/: lib.rs
hypernode/src/: btc_indexer.rs
integration-tests/: Cargo.toml
integration-tests/src/: auction_claimer_test.rs  bitcoin_data_engine_test.rs  btc_txn_broadcaster_test.rs  data_engine_test.rs  devnet_test.rs  dual_hypernode_market_maker_test.rs  fork_watchtower_test.rs  hypernode_test.rs  lib.rs  light_client_update_watchtower_test.rs  market_maker_hypernode_e2e_test.rs  quote_test.rs  swap_watchtower_test.rs  test_utils.rs  txn_broadcast_test.rs
integration-tests/src/test_helpers/: bitcoin_helpers.rs  fixtures.rs  hypernode_helpers.rs  mod.rs  order_helpers.rs  swap_helpers.rs
lab/: block_analysis.py  historical_confirmations.py  pyproject.toml  sim_confirmations.py
test-data/: Cargo.toml
