[workspace]
members = [
  "bin/benchmark-light-client",
  "bin/devnet-server",
  "bin/rift-indexer-server",
  "bin/hypernode",
  "bin/checkpoint-downloader",
  "bin/market-maker",
  "bin/sol-utils",
  "crates/bitcoin-data-engine",
  "crates/rift-indexer",
  "crates/bitcoin-core-rs",
  "crates/bitcoin-light-client-core",
  "crates/rift-sdk",
  "crates/rift-core", 
  "crates/rift-program",
  "crates/sol-bindings",
  "test-data",
  "integration-tests"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.82.0"
edition = "2021"
exclude = [".github/"]

[workspace.dependencies]
# Internal dependencies
sol-bindings= { path = "crates/sol-bindings" }
bitcoin-core-rs = { path = "crates/bitcoin-core-rs"}
bitcoin-light-client-core = { path = "crates/bitcoin-light-client-core" }
bitcoin-data-engine = { path = "crates/bitcoin-data-engine" }
rift-core = { path = "crates/rift-core" }
rift-sdk = { path = "crates/rift-sdk" }
rift-program = {path = "crates/rift-program"}
rift-indexer = { path = "crates/rift-indexer" }
test-data-utils = { path = "test-data" }
rift-indexer-server = { path = "bin/rift-indexer-server" }
checkpoint-downloader = { path = "bin/checkpoint-downloader" }
devnet = {path = "crates/devnet"}
market-maker = {path = "bin/market-maker"}
hypernode = {path = "bin/hypernode"}

# SP1 dependencies
sp1-helper = "5.0.0"
sp1-sdk = { version = "5.0.0", features = ["cuda"]}
sp1-cuda = "5.0.0"
sp1-zkvm = "5.0.0"
sp1-build = "5.0.0"

# External dependencies
crypto-bigint = "0.5.5"
tiny-keccak = "2.0.2"
sha2 = "0.10.8"

accumulators = { git = "https://github.com/riftresearch/rust-accumulators.git", rev = "fe0c7ed0a803a219b9b4e20d314ea074b859d688", features = ["all"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
hex-literal = "0.4.1"
once_cell = "1.18"
fs2 = "0.4"
prettytable = "0.10"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
thiserror = "1.0.63"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
axum = { version = "0.7", features = ["json", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tempfile = { version = "3.6.0" }
serial_test = "3.2.0"

alloy-sol-types = { version = "1.0.0", features = ["json"] }
alloy-primitives = "1.0.0"
alloy-contract = "0.14.0"
alloy = { version = "0.14.0", features = ["full", "node-bindings", "json", "json-rpc", "provider-debug-api", "provider-trace-api"] }

async-trait = "0.1.86"
reqwest = { version = "0.12.12", features = ["json"] }
zstd = "0.13.3"

eyre = "0.6.12"
tokio = {version="1.40.0", features=["full", "rt-multi-thread", "macros"]}
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
futures = "0.3.30"
futures-util = "0.3.30"
backoff = { version = "0.4.0", features=["tokio"] }
which = "7.0.3"

bitcoin = { git = "https://github.com/riftresearch/rust-bitcoin", tag = "bitcoin-0.32.5-patch-v1", default-features = false}
# This needs to be pinned to the same version of rust-bitcoin
bitcoincore-rpc-async = { git = "https://github.com/riftresearch/rust-bitcoincore-rpc-async", rev = "4949ff5035e1aacfeab7d86ef654331667c1ef03" }
esplora-client = { git = "https://github.com/riftresearch/rust-esplora-client.git", rev = "a571328ff799993f877d87db8dad6e4c6b313225", features = ["async", "tokio"] }
bitcoin-coin-selection =  { version = "0.7.0", features = ["rand"]}

corepc-node = { version = "0.8.0", features = ["29_0", "download"] }
electrsd = { git = "https://github.com/RCasatta/electrsd", rev = "bdc97e879bad82e13e69c74d898271db12224f44", features = ["corepc-node_29_0", "esplora_a33e97e1", "legacy"] }

dotenv = "0.15.0"
bip39 = "2.1.0"

# Additional dependencies for workspace import consistency
tower-http = { version = "0.6.2", features = ["cors"] }
regex = "1.11.1"
metrics = "0.24.2"
itertools = "0.14.0"
dashmap = "6.1.0"
anyhow = "1.0.98"
base64 = "0.22.1"
ring = "0.17.14"
jsonwebtoken = "9.3"
rand = "0.9.0"
lazy_static = "1.5.0"
mockall = "0.13.1"
ctor = "0.2"

[patch.crates-io]
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
bitcoin = { git = "https://github.com/riftresearch/rust-bitcoin", tag = "bitcoin-0.32.5-patch-v1" }
