[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[lib]
name = "integration_tests"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
devnet.workspace = true
tempfile.workspace = true
bitcoin-light-client-core.workspace = true
rift-core = { workspace = true }
rift-sdk = { workspace = true }
rift-indexer = { workspace = true }
corepc-node = { workspace = true }
sol-bindings= { workspace = true }
bitcoin-data-engine = { workspace = true }
accumulators = { workspace = true }
hypernode = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
alloy = { workspace = true }
bitcoin = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
bitcoincore-rpc-async = { workspace = true }
test-data-utils = { workspace = true }
crypto-bigint = { workspace = true }
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
market-maker = { workspace = true }
anyhow = { workspace = true }
ctor = { workspace = true }