[package]
name = "bitcoin-core-rs"
version = "0.1.0"
edition = "2021"
description = "Bitcoin Core consensus Rust implementation."
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
sha2 = {workspace = true} 
crypto-bigint = {workspace = true}
thiserror = {workspace = true} 


[dev-dependencies]
alloy-primitives = {workspace = true} 
