[package]
name = "bitcoin-data-engine"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
exclude.workspace = true

[dependencies]
bitcoincore-rpc-async = { workspace = true } 
bitcoin-light-client-core = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
rift-sdk = { workspace = true }
[dev-dependencies]
corepc-node = { workspace = true }