[package]
name = "devnet"
version.workspace = true
edition.workspace = true

[dependencies]
rift-core = { workspace = true }
rift-sdk = { workspace = true }
bitcoin-light-client-core = { workspace = true }
data-engine = { workspace = true }
data-engine-server = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
corepc-node = { workspace = true }
sol-bindings = { workspace = true }
bitcoin-data-engine = { workspace = true }
accumulators = { workspace = true }
checkpoint-downloader = { workspace = true }
tempfile = { workspace = true }
tokio-util = { workspace = true }
alloy = { workspace = true }
clap = { workspace = true }
bitcoin = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bitcoincore-rpc-async = { workspace = true }
thiserror = { workspace = true }
reqwest = {workspace = true}
async-trait = { workspace = true }
which = { workspace = true }
electrsd = { workspace = true}
esplora-client = {workspace = true}
once_cell = {workspace=true}
fs2 = {workspace = true } 