[package]
name = "devnet"
version.workspace = true
edition.workspace = true

[dependencies]
rift-indexer = { workspace = true }
rift-indexer-server = { workspace = true }
serde_json = { workspace = true }
corepc-node = { workspace = true }
bitcoin-data-engine = { workspace = true }
checkpoint-downloader = { workspace = true }
tempfile = { workspace = true }
alloy = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
bitcoincore-rpc-async = { workspace = true }
electrsd = { workspace = true}
esplora-client = {workspace = true}
tracing = { workspace = true }
hypernode = { workspace = true }
market-maker = { workspace = true }
rift-sdk = { workspace = true }
bitcoin = { workspace = true }
bitcoin-light-client-core = { workspace = true }
sol-bindings = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }