[package]
name = "rift-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
tokio.workspace = true
eyre.workspace = true
alloy.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio-rusqlite.workspace = true
sol-bindings = { workspace = true }
rift-sdk = { workspace = true }
bitcoin-light-client-core = { workspace = true }
rift-core = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }