[package]
name = "rift-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
rift-core = { workspace = true }
bitcoin-light-client-core = { workspace = true }

accumulators = { workspace = true }
alloy = {workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crypto-bigint = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { workspace = true }
backoff.workspace = true
bitcoincore-rpc-async = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
reqwest = {workspace = true } 
sol-bindings= { workspace = true }
hex = { workspace = true }
bip39 = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0.95"
rand = "0.9.0"
lazy_static = "1.5.0"
esplora-client = { version = "0.12.0", features = ["async", "tokio"] }


[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
sp1-build = {workspace = true} 
